data/derived/sp14/progs/unify/prog2784.ml.out
Characters 79-87:
  List.fold_left f base List.rev fs;;
                        ^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type ('b -> 'b) list
